--- a/app/src/main/res/layout/item_weibo_content.xml
+++ b/app/src/main/res/layout/item_weibo_content.xml
@@ -5,9 +5,9 @@
     android:orientation="vertical">
 
     <LinearLayout
-        android:background="@color/cw_white"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/cw_white"
         android:orientation="horizontal"
         android:padding="@dimen/space_s">
 
@@ -24,62 +24,60 @@
             android:layout_gravity="center_vertical"
             android:layout_marginLeft="@dimen/space_s"
             android:layout_weight="1"
-            android:orientation="vertical"
-            >
+            android:orientation="vertical">
+
             <TextView
                 android:id="@+id/tvUserName"
                 style="@style/tv_m_blue_sl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/empty_string"
-                />
+                android:text="@string/empty_string" />
+
             <TextView
                 android:id="@+id/tvTime"
                 style="@style/tv_m_grey_sl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvUserName"
-                android:text="@string/empty_string"
-                />
+                android:text="@string/empty_string" />
+
             <TextView
                 android:id="@+id/tvSource"
                 style="@style/tv_m_grey_sl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvUserName"
-                android:layout_toRightOf="@id/tvTime"
                 android:layout_marginLeft="@dimen/space_m"
-                android:text="@string/empty_string"
-                />
+                android:layout_toRightOf="@id/tvTime"
+                android:text="@string/empty_string" />
         </RelativeLayout>
     </LinearLayout>
 
     <TextView
-        android:background="@color/cw_white"
         android:id="@+id/tvContent"
         style="@style/tv_m_black_sl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="@color/cw_white"
         android:padding="@dimen/space_s"
         android:singleLine="false"
-        android:text="@string/empty_string"
-        />
+        android:text="@string/empty_string" />
+
     <ImageView
         android:id="@+id/ivContent"
         android:layout_width="@dimen/avatar_size_xxl"
         android:layout_height="@dimen/avatar_size_xxl"
         android:layout_margin="@dimen/space_m"
         android:scaleType="centerCrop"
-        android:src="@mipmap/ic_place_holder"
-        />
+        android:src="@mipmap/ic_place_holder" />
 
     <LinearLayout
         android:id="@+id/llRe"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/cw_bg"
-        android:orientation="vertical"
-        >
+        android:orientation="vertical">
+
         <TextView
             android:id="@+id/tvReContent"
             style="@style/tv_m_black_sl"
@@ -87,16 +85,66 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/space_s"
             android:singleLine="false"
-            android:text="@string/empty_string"
-            />
+            android:text="@string/empty_string" />
+
         <ImageView
             android:id="@+id/ivReContent"
             android:layout_width="@dimen/avatar_size_xxl"
             android:layout_height="@dimen/avatar_size_xxl"
             android:layout_marginLeft="@dimen/space_m"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ic_place_holder"
-            />
+            android:src="@mipmap/ic_place_holder" />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/llBottom"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/cw_white"
+        android:orientation="horizontal"
+        android:padding="@dimen/space_m">
+
+        <com.hjt.mydouya.views.DrawCenterTextView
+            android:id="@+id/tvRetweet"
+            android:drawablePadding="@dimen/space_s"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:drawableLeft="@mipmap/ic_toolbar_icon_retweet"
+            android:text="@string/empty_string" />
+
+        <View
+            android:layout_width="@dimen/height_divider"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/space_s"
+            android:layout_marginRight="@dimen/space_s"
+            android:background="@color/cw_grey" />
+
+        <com.hjt.mydouya.views.DrawCenterTextView
+            android:drawablePadding="@dimen/space_s"
+            android:id="@+id/tvComment"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:drawableLeft="@mipmap/ic_toolbar_icon_comment"
+            android:text="@string/empty_string" />
+
+        <View
+            android:layout_width="@dimen/height_divider"
+            android:layout_height="match_parent"
+            android:layout_marginLeft="@dimen/space_s"
+            android:layout_marginRight="@dimen/space_s"
+            android:background="@color/cw_grey" />
+
+        <com.hjt.mydouya.views.DrawCenterTextView
+            android:drawablePadding="@dimen/space_s"
+            android:id="@+id/tvLike"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:drawableLeft="@mipmap/ic_icon_unlike"
+            android:text="@string/empty_string" />
+
     </LinearLayout>
 
 
