--- a/app/src/main/res/layout/item_weibo_content.xml
+++ b/app/src/main/res/layout/item_weibo_content.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:orientation="vertical">
+              android:layout_width="match_parent"
+              android:layout_height="wrap_content"
+              android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,7 +16,7 @@
             android:layout_width="@dimen/avatar_size"
             android:layout_height="@dimen/avatar_size"
             android:contentDescription="@string/action_settings"
-            android:src="@mipmap/ic_place_holder" />
+            android:src="@mipmap/ic_place_holder"/>
 
         <RelativeLayout
             android:layout_width="0dp"
@@ -31,7 +31,7 @@
                 style="@style/tv_m_blue_sl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/empty_string" />
+                android:text="@string/empty_string"/>
 
             <TextView
                 android:id="@+id/tvTime"
@@ -39,7 +39,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_below="@+id/tvUserName"
-                android:text="@string/empty_string" />
+                android:text="@string/empty_string"/>
 
             <TextView
                 android:id="@+id/tvSource"
@@ -49,7 +49,7 @@
                 android:layout_below="@+id/tvUserName"
                 android:layout_marginLeft="@dimen/space_m"
                 android:layout_toRightOf="@id/tvTime"
-                android:text="@string/empty_string" />
+                android:text="@string/empty_string"/>
         </RelativeLayout>
     </LinearLayout>
 
@@ -61,7 +61,7 @@
         android:background="@color/cw_white"
         android:padding="@dimen/space_s"
         android:singleLine="false"
-        android:text="@string/empty_string" />
+        android:text="@string/empty_string"/>
 
     <ImageView
         android:id="@+id/ivContent"
@@ -69,7 +69,7 @@
         android:layout_height="@dimen/avatar_size_xxl"
         android:layout_margin="@dimen/space_m"
         android:scaleType="centerCrop"
-        android:src="@mipmap/ic_place_holder" />
+        android:src="@mipmap/ic_place_holder"/>
 
     <LinearLayout
         android:id="@+id/llRe"
@@ -85,7 +85,7 @@
             android:layout_height="wrap_content"
             android:padding="@dimen/space_s"
             android:singleLine="false"
-            android:text="@string/empty_string" />
+            android:text="@string/empty_string"/>
 
         <ImageView
             android:id="@+id/ivReContent"
@@ -93,7 +93,7 @@
             android:layout_height="@dimen/avatar_size_xxl"
             android:layout_marginLeft="@dimen/space_m"
             android:scaleType="centerCrop"
-            android:src="@mipmap/ic_place_holder" />
+            android:src="@mipmap/ic_place_holder"/>
     </LinearLayout>
 
     <LinearLayout
@@ -102,48 +102,59 @@
         android:layout_height="wrap_content"
         android:background="@color/cw_white"
         android:orientation="horizontal"
-        android:padding="@dimen/space_m">
+        >
 
         <com.hjt.mydouya.views.DrawCenterTextView
             android:id="@+id/tvRetweet"
-            android:drawablePadding="@dimen/space_s"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/bg_tv_selector"
+            android:clickable="true"
             android:drawableLeft="@mipmap/ic_toolbar_icon_retweet"
-            android:text="@string/empty_string" />
+            android:drawablePadding="@dimen/space_s"
+            android:paddingBottom="@dimen/space_s"
+            android:paddingTop="@dimen/space_s"
+            android:text="@string/empty_string"
+            />
 
         <View
             android:layout_width="@dimen/height_divider"
             android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/space_s"
-            android:layout_marginRight="@dimen/space_s"
-            android:background="@color/cw_grey" />
+            android:background="@color/cw_grey"/>
 
         <com.hjt.mydouya.views.DrawCenterTextView
-            android:drawablePadding="@dimen/space_s"
             android:id="@+id/tvComment"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/bg_tv_selector"
+            android:clickable="true"
             android:drawableLeft="@mipmap/ic_toolbar_icon_comment"
-            android:text="@string/empty_string" />
+            android:drawablePadding="@dimen/space_s"
+            android:paddingBottom="@dimen/space_s"
+            android:paddingTop="@dimen/space_s"
+            android:text="@string/empty_string"
+            />
 
         <View
             android:layout_width="@dimen/height_divider"
             android:layout_height="match_parent"
-            android:layout_marginLeft="@dimen/space_s"
-            android:layout_marginRight="@dimen/space_s"
-            android:background="@color/cw_grey" />
+            android:background="@color/cw_grey"/>
 
         <com.hjt.mydouya.views.DrawCenterTextView
-            android:drawablePadding="@dimen/space_s"
             android:id="@+id/tvLike"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:background="@drawable/bg_tv_selector"
+            android:clickable="true"
             android:drawableLeft="@mipmap/ic_icon_unlike"
-            android:text="@string/empty_string" />
+            android:drawablePadding="@dimen/space_s"
+            android:paddingBottom="@dimen/space_s"
+            android:paddingTop="@dimen/space_s"
+            android:text="@string/empty_string"
+            />
 
     </LinearLayout>
 
