--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,5 @@
     <color name="cw_blue_500">#5677fc</color>
     <color name="cw_black_deep">#2d3841</color>
     <color name="cw_red">#DC143F</color>
+    <color name="cw_lightBlue">#C6E2FF</color>
 </resources>
