--- a/app/src/main/res/layout/ac_baselayout.xml
+++ b/app/src/main/res/layout/ac_baselayout.xml
@@ -1,29 +1,39 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                        android:layout_width="match_parent"
+                                        android:layout_height="match_parent"
+    >
 
-    <android.support.v7.widget.Toolbar
-        android:id="@+id/toolbar"
-        android:layout_width="match_parent"
-        android:layout_height="?attr/actionBarSize"
-        android:background="@drawable/bg_lineframe_bottom">
-
-        <RelativeLayout
-            android:id="@+id/rlCustom"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center">
-        </RelativeLayout>
-
-    </android.support.v7.widget.Toolbar>
-
-
-    <RelativeLayout
-        android:id="@+id/rlContent"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/cw_bg"/>
+        android:orientation="vertical"
+        >
 
-</LinearLayout>
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="@drawable/bg_lineframe_bottom">
+
+            <RelativeLayout
+                android:id="@+id/rlCustom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center">
+            </RelativeLayout>
+
+        </android.support.v7.widget.Toolbar>
+
+
+        <RelativeLayout
+            android:id="@+id/rlContent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/cw_bg"/>
+
+    </LinearLayout>
+
+    <include layout="@layout/layout_drawer"></include>
+
+</android.support.v4.widget.DrawerLayout>
