--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -44,6 +44,12 @@
         <item name="android:singleLine">true</item>
     </style>
 
+    <style name="tv_m_white_sl">
+        <item name="android:textSize">@dimen/txt_m</item>
+        <item name="android:textColor">@color/cw_white</item>
+        <item name="android:singleLine">true</item>
+    </style>
+
     <style name="et_grey_hint_black_txt_bg_white">
         <item name="android:textSize">@dimen/txt_m</item>
         <item name="android:textColor">@color/cw_black</item>
