初步完善toolbar和DrawerLayout

--- a/app/src/main/res/layout/item_toolbar.xml
+++ b/app/src/main/res/layout/item_toolbar.xml
@@ -8,7 +8,12 @@
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize">
 
-
+        <ImageView
+            android:id="@+id/ivNavigation"
+            android:layout_gravity="left"
+            android:layout_width="@dimen/avatar_size"
+            android:layout_height="@dimen/avatar_size"
+            />
     </android.support.v7.widget.Toolbar>
 
 </LinearLayout>
