--- a/app/src/main/res/layout/ac_baselayout.xml
+++ b/app/src/main/res/layout/ac_baselayout.xml
@@ -1,7 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
+                                        xmlns:app="http://schemas.android.com/apk/res-auto"
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
+                                        android:id="@+id/dl_custom"
     >
 
     <LinearLayout
@@ -14,14 +16,25 @@
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
-            android:background="@drawable/bg_lineframe_bottom">
+            android:background="@drawable/bg_lineframe_bottom_selector"
+            >
 
-            <RelativeLayout
-                android:id="@+id/rlCustom"
+
+            <ImageView
+                android:id="@+id/ivNavigation"
+                android:layout_width="@dimen/avatar_size_s"
+                android:layout_height="@dimen/avatar_size_s"
+                />
+
+            <TextView
+                android:id="@+id/tvTitle"
+                style="@style/tv_m_black_sl"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center">
-            </RelativeLayout>
+                android:layout_gravity="center"
+                android:text="@string/empty_string"
+                android:textSize="@dimen/txt_m"
+                />
 
         </android.support.v7.widget.Toolbar>
 
