--- a/app/src/main/res/layout/layout_drawer.xml
+++ b/app/src/main/res/layout/layout_drawer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+              android:id="@+id/llDrawer"
               android:layout_width="match_parent"
               android:layout_height="match_parent"
               android:layout_gravity="start"
@@ -9,15 +10,14 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="2"
+        android:layout_weight="1"
         android:background="@drawable/bg_drawer"
         >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginTop="@dimen/space_xl"
-
+            android:layout_marginTop="@dimen/space_xxxl"
             android:orientation="horizontal"
             >
 
@@ -37,7 +37,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_vertical"
                 android:text="@string/empty_string"
-                android:textSize="@dimen/avatar_size"
+                android:textSize="@dimen/txt_xl"
                 />
 
         </LinearLayout>
@@ -47,7 +47,7 @@
     <ScrollView
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:layout_weight="3"
+        android:layout_weight="2"
         android:background="@color/cw_white"
         >
 
@@ -70,6 +70,7 @@
                     android:layout_height="@dimen/avatar_size"
                     android:layout_margin="@dimen/space_m"
                     android:src="@mipmap/ic_weixin"
+                    android:padding="@dimen/space_s"
                     />
 
                 <TextView
@@ -78,7 +79,6 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:text="我的微信"
-                    android:textSize="@dimen/txt_l"
                     />
 
             </LinearLayout>
@@ -95,6 +95,7 @@
                     android:layout_height="@dimen/avatar_size"
                     android:layout_margin="@dimen/space_m"
                     android:src="@mipmap/ic_qq"
+                    android:padding="@dimen/space_s"
                     />
 
                 <TextView
@@ -103,7 +104,6 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:text="我的QQ"
-                    android:textSize="@dimen/txt_l"
                     />
 
             </LinearLayout>
