--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,6 +26,7 @@
 
     <dimen name="height_divider">1px</dimen>
 
+    <dimen name="avatar_size_s">32dp</dimen>
     <dimen name="avatar_size">48dp</dimen>
     <dimen name="avatar_size_l">60dp</dimen>
     <dimen name="avatar_size_xl">72dp</dimen>
