完成我的微博的查看

--- a/app/src/main/res/layout/fg_message.xml
+++ b/app/src/main/res/layout/fg_message.xml
@@ -6,40 +6,6 @@
     >
 
     <LinearLayout
-        android:id="@+id/llAt"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@drawable/bg_lineframe_bottom_selector"
-        android:clickable="true"
-        android:orientation="horizontal"
-        android:padding="@dimen/space_s"
-        >
-
-        <ImageView
-            android:layout_width="@dimen/avatar_size"
-            android:layout_height="@dimen/avatar_size"
-            android:src="@mipmap/ic_messages_at"
-            />
-
-        <TextView
-            style="@style/tv_m_black_sl"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:layout_weight="1"
-            android:padding="@dimen/space_m"
-            android:text="@string/at_me"
-            />
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_vertical"
-            android:src="@mipmap/ic_arrow_right"
-            />
-    </LinearLayout>
-
-    <LinearLayout
         android:id="@+id/llComments"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -50,6 +16,7 @@
         >
 
         <ImageView
+            android:id="@+id/ivComments"
             android:layout_width="@dimen/avatar_size"
             android:layout_height="@dimen/avatar_size"
             android:src="@mipmap/ic_messages_comments"
@@ -74,6 +41,42 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/llAt"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/bg_lineframe_bottom_selector"
+        android:clickable="true"
+        android:orientation="horizontal"
+        android:padding="@dimen/space_s"
+        >
+
+        <ImageView
+            android:id="@+id/ivAt"
+            android:layout_width="@dimen/avatar_size"
+            android:layout_height="@dimen/avatar_size"
+            android:src="@mipmap/ic_messages_at"
+            />
+
+        <TextView
+            style="@style/tv_m_black_sl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:layout_weight="1"
+            android:padding="@dimen/space_m"
+            android:text="@string/at_me"
+            />
+
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_vertical"
+            android:src="@mipmap/ic_arrow_right"
+            />
+    </LinearLayout>
+
+
+    <LinearLayout
         android:id="@+id/llLike"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -84,9 +87,10 @@
         >
 
         <ImageView
+            android:id="@+id/ivLike"
             android:layout_width="@dimen/avatar_size"
             android:layout_height="@dimen/avatar_size"
-            android:src="@mipmap/ic_messages_at"
+            android:src="@mipmap/ic_messages_good"
             />
 
         <TextView
