--- a/app/src/main/res/layout/ac_baselayout.xml
+++ b/app/src/main/res/layout/ac_baselayout.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                         xmlns:app="http://schemas.android.com/apk/res-auto"
+                                        android:id="@+id/dl_custom"
                                         android:layout_width="match_parent"
                                         android:layout_height="match_parent"
-                                        android:id="@+id/dl_custom"
     >
 
     <LinearLayout
@@ -32,9 +32,17 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
-                android:text="@string/empty_string"
                 android:textSize="@dimen/txt_m"
                 />
+
+            <ImageView
+                android:id="@+id/ivWrite"
+                android:layout_width="@dimen/avatar_size_xs"
+                android:layout_height="@dimen/avatar_size_xs"
+                android:layout_gravity="end"
+                android:layout_marginRight="@dimen/space_s"
+                />
+
 
         </android.support.v7.widget.Toolbar>
 
