--- a/app/src/main/res/layout/fg_profile.xml
+++ b/app/src/main/res/layout/fg_profile.xml
@@ -53,7 +53,7 @@
     </LinearLayout>
 
     <TextView
-        android:id="@+id/tvWeiboCount"
+        android:id="@+id/tvMyArticle"
         style="@style/tv_m_black_sl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
