--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -26,6 +26,8 @@
 
     <dimen name="height_divider">1px</dimen>
 
+    <dimen name="avatar_size_xxs">16dp</dimen>
+    <dimen name="avatar_size_xs">24dp</dimen>
     <dimen name="avatar_size_s">32dp</dimen>
     <dimen name="avatar_size">48dp</dimen>
     <dimen name="avatar_size_l">60dp</dimen>
