--- a/app/src/main/res/layout/ac_home_page.xml
+++ b/app/src/main/res/layout/ac_home_page.xml
@@ -1,64 +1,68 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+              android:layout_width="match_parent"
+              android:layout_height="match_parent"
+              android:orientation="vertical">
 
     <FrameLayout
         android:id="@+id/flContainer"
-        android:layout_weight="1"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        android:layout_weight="1"/>
 
     <android.support.v4.app.FragmentTabHost
-        android:visibility="gone"
         android:id="@+id/tabHost"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"/>
+        android:layout_height="wrap_content"
+        android:visibility="gone"/>
 
     <RadioGroup
         android:id="@+id/rgTab"
-        android:orientation="horizontal"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@color/cw_white"
+        android:orientation="horizontal"
         >
+
         <RadioButton
             android:id="@+id/rbHome"
-            android:checked="true"
-            android:drawableTop="@drawable/bg_tabbar_home_selector"
-            android:drawablePadding="@dimen/space_xs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:button="@null"
-            android:text="@string/lbl_home"
-            android:textSize="@dimen/txt_m"
-            android:textColor="@drawable/bg_home_text_selector"
+            android:checked="true"
+            android:drawablePadding="@dimen/space_xs"
+            android:drawableTop="@drawable/bg_tabbar_home_selector"
             android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:text="@string/lbl_home"
+            android:textColor="@drawable/bg_home_text_selector"
+            android:textSize="@dimen/txt_m"/>
+
         <RadioButton
             android:id="@+id/rbMessage"
-            android:drawableTop="@drawable/bg_tabbar_message_selector"
-            android:drawablePadding="@dimen/space_xs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:button="@null"
-            android:text="@string/lbl_message"
-            android:textSize="@dimen/txt_m"
-            android:textColor="@drawable/bg_home_text_selector"
+            android:drawablePadding="@dimen/space_xs"
+            android:drawableTop="@drawable/bg_tabbar_message_selector"
             android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:text="@string/lbl_message"
+            android:textColor="@drawable/bg_home_text_selector"
+            android:textSize="@dimen/txt_m"/>
+
         <RadioButton
             android:id="@+id/rbProfile"
-            android:drawableTop="@drawable/bg_tabbar_profile_selector"
-            android:drawablePadding="@dimen/space_xs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
             android:layout_weight="1"
             android:button="@null"
-            android:text="@string/lbl_profile"
-            android:textSize="@dimen/txt_m"
-            android:textColor="@drawable/bg_home_text_selector"
+            android:drawablePadding="@dimen/space_xs"
+            android:drawableTop="@drawable/bg_tabbar_profile_selector"
             android:gravity="center"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:text="@string/lbl_profile"
+            android:textColor="@drawable/bg_home_text_selector"
+            android:textSize="@dimen/txt_m"/>
     </RadioGroup>
 
 </LinearLayout>
