--- a/app/src/main/res/layout/item_weibo_content.xml
+++ b/app/src/main/res/layout/item_weibo_content.xml
@@ -2,12 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:orientation="vertical">
+              android:background="@drawable/bg_layout_selector"
+              android:clickable="true"
+              android:orientation="vertical"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/cw_white"
         android:orientation="horizontal"
         android:padding="@dimen/space_s">
 
@@ -53,21 +55,22 @@
         </RelativeLayout>
     </LinearLayout>
 
+
     <TextView
         android:id="@+id/tvContent"
         style="@style/tv_m_black_sl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/cw_white"
         android:padding="@dimen/space_s"
         android:singleLine="false"
         android:text="@string/empty_string"/>
+
 
     <ImageView
         android:id="@+id/ivContent"
         android:layout_width="@dimen/avatar_size_xxl"
         android:layout_height="@dimen/avatar_size_xxl"
-        android:layout_margin="@dimen/space_m"
+        android:layout_margin="@dimen/space_s"
         android:scaleType="centerCrop"
         android:src="@mipmap/ic_place_holder"/>
 
@@ -91,7 +94,7 @@
             android:id="@+id/ivReContent"
             android:layout_width="@dimen/avatar_size_xxl"
             android:layout_height="@dimen/avatar_size_xxl"
-            android:layout_marginLeft="@dimen/space_m"
+            android:layout_marginLeft="@dimen/space_s"
             android:scaleType="centerCrop"
             android:src="@mipmap/ic_place_holder"/>
     </LinearLayout>
