--- a/app/src/main/res/layout/item_weibo_article.xml
+++ b/app/src/main/res/layout/item_weibo_article.xml
@@ -2,12 +2,14 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
               android:layout_width="match_parent"
               android:layout_height="wrap_content"
-              android:orientation="vertical">
+              android:background="@drawable/bg_layout_selector"
+              android:clickable="true"
+              android:orientation="vertical"
+    >
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/cw_white"
         android:orientation="horizontal"
         android:padding="@dimen/space_s">
 
@@ -41,19 +43,61 @@
                 android:layout_below="@+id/tvUserName"
                 android:text="@string/empty_string"/>
 
+            <TextView
+                android:id="@+id/tvSource"
+                style="@style/tv_m_grey_sl"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/tvUserName"
+                android:layout_marginLeft="@dimen/space_m"
+                android:layout_toRightOf="@id/tvTime"
+                android:text="@string/empty_string"/>
         </RelativeLayout>
     </LinearLayout>
+
 
     <TextView
         android:id="@+id/tvContent"
         style="@style/tv_m_black_sl"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/cw_white"
-        android:paddingLeft="64dp"
-        android:paddingBottom="@dimen/space_s"
+        android:padding="@dimen/space_s"
         android:singleLine="false"
         android:text="@string/empty_string"/>
+
+
+    <ImageView
+        android:id="@+id/ivContent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="@dimen/space_s"
+        android:adjustViewBounds="true"
+        android:src="@mipmap/ic_place_holder"/>
+
+    <LinearLayout
+        android:id="@+id/llRe"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@color/cw_iv_bg_grey"
+        android:orientation="vertical">
+
+        <TextView
+            android:id="@+id/tvReContent"
+            style="@style/tv_m_black_sl"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:padding="@dimen/space_s"
+            android:singleLine="false"
+            android:text="@string/empty_string"/>
+
+        <ImageView
+            android:id="@+id/ivReContent"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_margin="@dimen/space_s"
+            android:adjustViewBounds="true"
+            android:src="@mipmap/ic_place_holder"/>
+    </LinearLayout>
 
 
 </LinearLayout>
