--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -15,6 +15,7 @@
     <color name="cw_bg_900">#263238</color>
     <color name="cw_bg">#f5f5f5</color>
     <color name="cw_grey">#9e9e9e</color>
+    <color name="cw_iv_bg_grey">#F4F4F4</color>
     <color name="cw_lightgrey">#f5f5f5</color>
     <color name="cw_yellow">#ffab00</color>
     <color name="cw_blue">#576b95</color>
