添加我的评论中的view点击

--- a/app/src/main/res/layout/ac_article.xml
+++ b/app/src/main/res/layout/ac_article.xml
@@ -97,6 +97,13 @@
         </RelativeLayout>
     </com.handmark.pulltorefresh.library.PullToRefreshScrollView>
 
+    <!--<View-->
+        <!--android:layout_width="match_parent"-->
+        <!--android:layout_height="@dimen/height_divider"-->
+        <!--android:background="@color/cw_bg"-->
+        <!--android:layout_above="@id/llBottom"-->
+        <!--/>-->
+
     <!-- bottom toolbar -->
     <LinearLayout
         android:id="@+id/llBottom"
